fix: logo, scrollbar, loadimage

--- a/apps/discover/src/styles.scss
+++ b/apps/discover/src/styles.scss
@@ -72,19 +72,19 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-	background: #2b2d31;
+	background: #fff;
 	border-radius: 5px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: #1a1b1e;
+	background: #5865F2;
 	border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: #1a1b1e;
+	background: #cbd5e1;
 }
 
 html,
